[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/FloodFillSound/FloodFillSound.gd" type="Script" id=1]
[ext_resource path="res://scenes/FloodFillSound/SoundMeshLibrary.tres" type="MeshLibrary" id=2]
[ext_resource path="res://audio/sfx/ping2.ogg" type="AudioStream" id=3]

[node name="FloodFillSound" type="Spatial"]
script = ExtResource( 1 )
stream = ExtResource( 3 )

[node name="PropagationTimer" type="Timer" parent="."]
one_shot = true

[node name="PropagationMap" type="GridMap" parent="."]
mesh_library = ExtResource( 2 )
cell_size = Vector3( 1, 1, 1 )
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="SoundPlayers" type="Spatial" parent="."]

[connection signal="timeout" from="PropagationTimer" to="." method="_on_Timer_timeout"]
